<resources>
    <string name="app_name">Lab1</string>
    <string name="have_an_account_already_log_in">Have an account already? Log in!</string>
    <string name="signup_btn">Sign up</string>
    <string name="signup_password">Password</string>
    <string name="signup_phone">Phone</string>
    <string name="signup_email">Email</string>
    <string name="signup_name">Name</string>
    <string name="dont_have_an_account_sign_up">Dont have an account? Sign up!</string>
    <string name="login_btn">Login</string>
    <string name="login_password">Password</string>
    <string name="login_email">Email</string>
    <string name="welcome">Welcome </string>
    <string name="sign_out">Sign out</string>
    <string name="successful_registration">You are successfully signed up!</string>
    <string name="registration_failure">Registration failed</string>
    <string name="invalid_password_input">Minimum password length is at least 8 characters</string>
    <string name="invalid_phone_input">Invalid form of phone number</string>
    <string name="invalid_email_input">Invalid form of email</string>
    <string name="name_is_required">Name is required</string>
    <string name="email_is_required">Email is required</string>
    <string name="phone_number_is_required">Phone number is required</string>
    <string name="password_is_required">Password is required</string>
    <string name="input_validation">Please, validate your input fields</string>
    <string name="successful_login">You are successfully logged in!</string>
    <string name="login_failure">Failure</string>
    <string name="Welcome">Welcome</string>
    <string name="database_read_failure">Database failure</string>
    <string name="signout_btn">Sign out</string>
    <string name="no_internet_connection">No Internet connection</string>
    <string name="failure">Update failure</string>
    <string name="robot_code">Code: </string>
    <string name="trajectory">Trajectory: </string>
    <string name="time">Time: </string>
    <string name="address">Address: </string>
    <string name="robot_name">Name: </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab2">Tab #2</string>
    <string name="data_list">Data List</string>
    <string name="profile">Profile</string>
    <string name="enter_new_email">Enter new email</string>
    <string name="update">Update</string>
    <string name="enter_new_username">Enter new username</string>
    <string name="profile_picture">Profile picture</string>
    <string name="image_uploaded">Image uploaded!</string>
    <string name="username_updated">Username is updated!</string>
    <string name="email_updated">Email is updated!</string>
    <string name="enter_email">Please enter email</string>
    <string name="enter_valid_email">Please enter a valid email</string>
    <string name="enter_username">Please enter username</string>
    <string name="enter_valid_phone">Please enter valid phone number</string>
    <string name="error">Error</string>
    <string name="logout">Log Out</string>
</resources>
